# pkg/api/v1/deepcopy_generated.go
@@ -601,6 +601,15 @@ func (in *DomainSpec) DeepCopyInto(out *DomainSpec) {
 			**out = **in
 		}
 	}
+	if in.Ignition != nil {
+		in, out := &in.Ignition, &out.Ignition
+		if *in == nil {
+			*out = nil
+		} else {
+			*out = new(Ignition)
+			**out = **in
+		}
+	}
 	return
 }
 
@@ -1101,6 +1110,22 @@ func (in *I6300ESBWatchdog) DeepCopy() *I6300ESBWatchdog {
 		return nil
 	}
 	out := new(I6300ESBWatchdog)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *Ignition) DeepCopyInto(out *Ignition) {
+	*out = *in
+	return
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new Ignition.
+func (in *Ignition) DeepCopy() *Ignition {
+	if in == nil {
+		return nil
+	}
+	out := new(Ignition)
 	in.DeepCopyInto(out)
 	return out
 }
@@ -2377,6 +2402,15 @@ func (in *VirtualMachineInstanceSpec) DeepCopyInto(out *VirtualMachineInstanceSp
 		} else {
 			*out = new(core_v1.PodDNSConfig)
 			(*in).DeepCopyInto(*out)
+		}
+	}
+	if in.Ignition != nil {
+		in, out := &in.Ignition, &out.Ignition
+		if *in == nil {
+			*out = nil
+		} else {
+			*out = new(Ignition)
+			**out = **in
 		}
 	}
 	return
