# pkg/virt-launcher/virtwrap/api/converter.go
@@ -39,6 +39,7 @@ import (
 	containerdisk "kubevirt.io/kubevirt/pkg/container-disk"
 	"kubevirt.io/kubevirt/pkg/emptydisk"
 	ephemeraldisk "kubevirt.io/kubevirt/pkg/ephemeral-disk"
+	"kubevirt.io/kubevirt/pkg/ignition"
 	"kubevirt.io/kubevirt/pkg/log"
 	"kubevirt.io/kubevirt/pkg/precond"
 	"kubevirt.io/kubevirt/pkg/util"
@@ -322,6 +323,13 @@ func Convert_v1_CloudInitNoCloudSource_To_api_Disk(source *v1.CloudInitNoCloudSo
 	}
 
 	disk.Source.File = fmt.Sprintf("%s/%s", cloudinit.GetDomainBasePath(c.VirtualMachine.Name, c.VirtualMachine.Namespace), cloudinit.NoCloudFile)
+	disk.Type = "file"
+	disk.Driver.Type = "raw"
+	return nil
+}
+
+func Convert_v1_IgnitionData_To_api_Disk(disk *Disk, c *ConverterContext) error {
+	disk.Source.File = fmt.Sprintf("%s/%s", ignition.GetDomainBasePath(c.VirtualMachine.Name, c.VirtualMachine.Namespace), c.VirtualMachine.Spec.Ignition.Data)
 	disk.Type = "file"
 	disk.Driver.Type = "raw"
 	return nil
@@ -1034,6 +1042,19 @@ func Convert_v1_VirtualMachine_To_api_Domain(vmi *v1.VirtualMachineInstance, dom
 		}
 	}
 
+	// Add Ignition Command Line if present
+	if vmi.Spec.Domain.Ignition != nil && vmi.Spec.Domain.Ignition.Data != "" {
+		if domain.Spec.QEMUCmd == nil {
+			domain.Spec.QEMUCmd = &Commandline{}
+		}
+
+		if domain.Spec.QEMUCmd.QEMUArg == nil {
+			domain.Spec.QEMUCmd.QEMUArg = make([]Arg, 0)
+		}
+		domain.Spec.QEMUCmd.QEMUArg = append(domain.Spec.QEMUCmd.QEMUArg, Arg{Value: "-fw_cfg"})
+		ignitionpath := fmt.Sprintf("%s/data.ign", ignition.GetDomainBasePath(c.VirtualMachine.Name, c.VirtualMachine.Namespace))
+		domain.Spec.QEMUCmd.QEMUArg = append(domain.Spec.QEMUCmd.QEMUArg, Arg{Value: fmt.Sprintf("name=opt/com.coreos/config,file=%s", ignitionpath)})
+	}
 	return nil
 }
 
